[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Peter Sebastian Puetz <pullconf@proton.me>"]
description = "Pull-based Linux configuration management system, common library"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["local-offset", "macros", "formatting", "parsing", "serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
