[package]
name = "pullconfd"
version = "0.1.0"
edition = "2021"
authors = ["Peter Sebastian Puetz <pullconf@proton.me>"]
description = "Pull-based Linux configuration management system, server component"
readme = "README.md"
license = "MIT"

[dependencies]
common = { path = "../common" }
log = "0.4"
rand = "0.8"
rouille = { version = "3.6", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"
std-logger = "0.5"
time = "0.3"
toml = "0.8"
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1"

[package.metadata.deb]
extended-description = "Pullconf is a configuration management system for Debian GNU/Linux and other Debian-based distributions. It defines resources in static configuration files that are then consumed and applied by a client on a target server."
section = "admin"
priority = "optional"
maintainer-scripts = "deb/"
systemd-units = { unit-name = "pullconfd", unit-scripts = "systemd/"} 
assets = [
       ["target/release/pullconfd", "/usr/bin/pullconfd", "755"],
       ["logrotate.d/pullconfd", "/etc/logrotate.d/pullconfd", "644" ],
]
depends = "$auto"
